Saving progress on index.html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-<p>Melanie</p>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>Melanie Jones - My Many Life Adventures</title>
+	 </head>
+
+	<body>
+	   <header>
+	    <h1>My Many Life Adventures</h1>
+	    <nav>
+	    <ul>
+	    <li></li>
+	    <li></li>
+	    <li></li>
+	    </ul>
+	    </nav>
+	    </header>
+	<main>
+	<article>
+	<section>
+	  <a name="military"></a>
+	  <h2>My Time in the Military</h2>
+	  <p>When I was 17, I joined the Army National Guard. I signed up for a 6 year contract. I left for basic training and AIT directly
+	  after graduating highschool. For the first two and a half months, I was in South Carolina at Fort Jackson. The remainder of the time I was
+	  in Virginia at Fort Lee. 
+	  </p>
+	  <figure> 
+	  <figcaption></figcaption>
+	  </figure>
+	</section>
+
+
+
+	</article>
+	</main>
+
+
+
+
+
+
+
+
+	<footer> 
+	© 2019 Melanie Jones
+	</footer>
+	</body>
+
