Saving more Progess on index.html file

--- a/index.html
+++ b/index.html
@@ -2,42 +2,62 @@
 
 <html>
    <head>
-      <title>Melanie Jones - My Many Life Adventures</title>
+      <title>Melanie Jones - The Life Events That Got Me to LaunchCode</title>
 	 </head>
 
 	<body>
 	   <header>
-	    <h1>My Many Life Adventures</h1>
+	    <h1>The Life Events That Got Me to LaunchCode</h1>
 	    <nav>
 	    <ul>
-	    <li></li>
-	    <li></li>
-	    <li></li>
+	    <li>
+	      <a href="#military">My Time in the Military</a>
+	    </li>
+	    <li>
+	      <a href="#mizzou">My Time at Mizzou</a>
+	    </li>
+	    <li>
+	    </li>
 	    </ul>
 	    </nav>
 	    </header>
 	<main>
 	<article>
 	<section>
-	  <a name="military"></a>
-	  <h2>My Time in the Military</h2>
-	  <p>When I was 17, I joined the Army National Guard. I signed up for a 6 year contract. I left for basic training and AIT directly
-	  after graduating highschool. For the first two and a half months, I was in South Carolina at Fort Jackson. The remainder of the time I was
-	  in Virginia at Fort Lee. 
-	  </p>
-	  <figure> 
-	  <figcaption></figcaption>
-	  </figure>
+	   <a name="military"></a>
+	   <h2>My Time in the Military</h2>
+	   <p>In April 2013, when I was 17, I joined the Army National Guard. I signed up for a 6 year contract. I left for basic training and AIT directly
+	   after graduating highschool. For the first two <br> and a half months, I was in South Carolina at Fort Jackson. The remainder of the time I was
+	   in Virginia at Fort Lee. At Fort Lee, I went through MOS training for 92Y <br> which means, "Supply Specialist". This training taught me how to control the entire unit's 
+	   supply purchasing and inventory. The total inventory for my unit was over $300,000,000. 
+	   </p>
+	   <h3>Why I Joined</h3>
+	   <p>
+	   The reason I joined the Guard was because I was not sure what I wanted to major in at college.
+	   I knew I wanted to go to college but I was unsure <em>what</em> I wanted to do once I got there.<br> By joining
+	   the guard, I was able to take a break between highschool and college. The guard also offered tuition reimbursement.<br><br>
+	   Once I graduated from Fort Lee, I then came back to Missouri and was enrolled in 
+	   the University of Missouri-Columbia. Also known as the beloved "Mizzou". 
+	   </p>	
+	   <figure> 
+	     <img src="https://i.imgur.com/Cg9D1AE.jpg" alt="Graduating MP School">
+	        <figcaption>
+		 My best friend and I after graduating from Military Police School
+                </figcaption>
+	   </figure>
 	</section>
-
-
+	<section>
+	 <a name="mizzou"></a>
+	 <h2>My Time at Mizzou</h2>
+	 <p>
+	   
+	 </p>
+	 <figure>
+	 <figcaption></figcaption>
+	 </figure>
 
 	</article>
 	</main>
-
-
-
-
 
 
 
