saved more progress on project

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
 	<section>
 	 <a name="mizzou"></a>
 	 <h2>My Time at Mizzou</h2>
-	 <p>
-	   
+	 <p> 
+           I got to Mizzou in the spring semester of 2014. My friends had already been at Mizzou for an entire semester before me. <br>
+	   I first began college majoring in Psychology, but half way in to my college career, I realized I wanted to major in something <br>
+	   emphasizing more in marketing. I then switched my major to Organizational Communication. 
 	 </p>
 	 <figure>
 	 <figcaption></figcaption>
@@ -63,7 +65,7 @@
 
 
 	<footer> 
-	© 2019 Melanie Jones
+	&#169 2019 Melanie Jones
 	</footer>
 	</body>
 
