made changes within project and switched to VS

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	      <a href="#mizzou">My Time at Mizzou</a>
 	    </li>
 	    <li>
+          <a href="#insight">My Time at Insight Global</a>
 	    </li>
 	    </ul>
 	    </nav>
@@ -51,12 +52,25 @@
 	 <h2>My Time at Mizzou</h2>
 	 <p> 
            I got to Mizzou in the spring semester of 2014. My friends had already been at Mizzou for an entire semester before me. <br>
-	   I first began college majoring in Psychology, but half way in to my college career, I realized I wanted to major in something <br>
+	   I first began college majoring in Psychology, but halfway into my college career, I realized I wanted to major in something <br>
 	   emphasizing more in marketing. I then switched my major to Organizational Communication. 
 	 </p>
 	 <figure>
 	 <figcaption></figcaption>
 	 </figure>
+	 <h3>After Graduation</h3>
+	 <p>
+	    After graduating from Mizzou, I accepted my first job right away at Insight Global, an IT staffing firm. By staffing<br>
+	    Software Developers and Buisiness Analysts, I learned about the many many positions in IT and how much moolah they made.
+	</p>
+	<section>
+	<a name="insight"></a>
+	<h2>My Time at Insight Global</h2>
+	<p>
+	   I spent about 11 months at Insight Global staffing contractors at fortune 500 companies such as, Centene, Boeing, Sqare, <br>
+	   I was putting in about 12 hours a day working a ton of over time to ensure I was finding candidates for my positions. I was <br>
+	   put on a project to staff the company "Square". 
+	</p>
 
 	</article>
 	</main>
