made more changes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 	      <a href="#mizzou">My Time at Mizzou</a>
 	    </li>
 	    <li>
-          <a href="#insight">My Time at Insight Global</a>
-	    </li>
+		   <a href=#insight>My Time at Insight Global</a>
+		</li>
+		<li>
+			<a href=#launch>My Time at LaunchCode</a>
+		</li>
 	    </ul>
 	    </nav>
 	    </header>
@@ -28,41 +31,48 @@
 	   <a name="military"></a>
 	   <h2>My Time in the Military</h2>
 	   <p>In April 2013, when I was 17, I joined the Army National Guard. I signed up for a 6 year contract. I left for basic training and AIT directly
-	   after graduating highschool. For the first two <br> and a half months, I was in South Carolina at Fort Jackson. The remainder of the time I was
-	   in Virginia at Fort Lee. At Fort Lee, I went through MOS training for 92Y <br> which means, "Supply Specialist". This training taught me how to control the entire unit's 
+	   after graduating highschool. For the first two and a half months, I was in South Carolina at Fort Jackson. The remainder of the time I was
+	   in Virginia at Fort Lee. At Fort Lee, I went through MOS training for 92Y which means, "Supply Specialist". This training taught me how to control the entire unit's 
 	   supply purchasing and inventory. The total inventory for my unit was over $300,000,000. 
 	   </p>
 	   <h3>Why I Joined</h3>
 	   <p>
 	   The reason I joined the Guard was because I was not sure what I wanted to major in at college.
-	   I knew I wanted to go to college but I was unsure <em>what</em> I wanted to do once I got there.<br> By joining
+	   I knew I wanted to go to college but I was unsure <em>what</em> I wanted to do once I got there. By joining
 	   the guard, I was able to take a break between highschool and college. The guard also offered tuition reimbursement.<br><br>
 	   Once I graduated from Fort Lee, I then came back to Missouri and was enrolled in 
 	   the University of Missouri-Columbia. Also known as the beloved "Mizzou". 
 	   </p>	
+	   </section>
 	   <figure> 
 	     <img src="https://i.imgur.com/Cg9D1AE.jpg" alt="Graduating MP School">
 	        <figcaption>
 		 My best friend and I after graduating from Military Police School
                 </figcaption>
 	   </figure>
-	</section>
+	   </article>
+	<article>
 	<section>
 	 <a name="mizzou"></a>
 	 <h2>My Time at Mizzou</h2>
 	 <p> 
-           I got to Mizzou in the spring semester of 2014. My friends had already been at Mizzou for an entire semester before me. <br>
-	   I first began college majoring in Psychology, but halfway into my college career, I realized I wanted to major in something <br>
+           I got to Mizzou in the spring semester of 2014. My friends had already been at Mizzou for an entire semester before me. 
+	   I first began college majoring in Psychology, but halfway into my college career, I realized I wanted to major in something 
 	   emphasizing more in marketing. I then switched my major to Organizational Communication. 
 	 </p>
+	 </section>
 	 <figure>
 	 <figcaption></figcaption>
 	 </figure>
+	 <section>
 	 <h3>After Graduation</h3>
 	 <p>
-	    After graduating from Mizzou, I accepted my first job right away at Insight Global, an IT staffing firm. By staffing<br>
+	    After graduating from Mizzou, I accepted my first job right away at Insight Global, an IT staffing firm. By staffing
 	    Software Developers and Buisiness Analysts, I learned about the many many positions in IT and how much moolah they made.
 	</p>
+	</section>
+	</article>
+	<article>
 	<section>
 	<a name="insight"></a>
 	<h2>My Time at Insight Global</h2>
@@ -71,7 +81,22 @@
 	   I was putting in about 12 hours a day working a ton of over time to ensure I was finding candidates for my positions. I was <br>
 	   put on a project to staff the company "Square". 
 	</p>
-
+	<h3>How I Learned About LaunchCode</h3>
+	<p>
+		While conducting interviews for the "Square" customer service positions, I spoke with a girl who said she had learned
+		to code from a <b>free</b> program called "LaunchCode". She told me how to apply to the program and to keep my eyes peeled for when enrollments
+		were going to start up again. 
+	</p>
+	</section>
+	<section>
+	<a name="launch"></a>
+	<h2>My Time at LaunchCode</h2>
+	<p>
+		Well, I guess it's pretty self explanatory that I am here at LaunchCode today! I often wonder what
+		my life would have been like had I gone to college on time, majored in something differemt, possibly gotten my first job
+		in something aside from IT staffing. 
+	</p>
+	</section>
 	</article>
 	</main>
 
@@ -79,7 +104,7 @@
 
 
 	<footer> 
-	&#169 2019 Melanie Jones
+		&#169 2019 Melanie Jones
 	</footer>
 	</body>
 
