saved changes to web page and starting on css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html>
    <head>
-      <title>Melanie Jones - The Life Events That Got Me to LaunchCode</title>
+	  <title>Melanie Jones - The Life Events That Got Me to LaunchCode</title>
+	  <link rel="stylesheet" type="text/css" href="styles.css">
 	 </head>
 
 	<body>
@@ -27,16 +28,16 @@
 	    </header>
 	<main>
 	<article>
-	<section>
+	<section id="sec1">
 	   <a name="military"></a>
 	   <h2>My Time in the Military</h2>
-	   <p>In April 2013, when I was 17, I joined the Army National Guard. I signed up for a 6 year contract. I left for basic training and AIT directly
+	   <p id="p1">In April 2013, when I was 17, I joined the Army National Guard. I signed up for a 6 year contract. I left for basic training and AIT directly
 	   after graduating highschool. For the first two and a half months, I was in South Carolina at Fort Jackson. The remainder of the time I was
 	   in Virginia at Fort Lee. At Fort Lee, I went through MOS training for 92Y which means, "Supply Specialist". This training taught me how to control the entire unit's 
 	   supply purchasing and inventory. The total inventory for my unit was over $300,000,000. 
 	   </p>
 	   <h3>Why I Joined</h3>
-	   <p>
+	   <p id="p2">
 	   The reason I joined the Guard was because I was not sure what I wanted to major in at college.
 	   I knew I wanted to go to college but I was unsure <em>what</em> I wanted to do once I got there. By joining
 	   the guard, I was able to take a break between highschool and college. The guard also offered tuition reimbursement.<br><br>
@@ -52,28 +53,31 @@
 	   </figure>
 	   </article>
 	<article>
-	<section>
+	<section id="sec2">
 	 <a name="mizzou"></a>
 	 <h2>My Time at Mizzou</h2>
-	 <p> 
+	 <p id="p3"> 
            I got to Mizzou in the spring semester of 2014. My friends had already been at Mizzou for an entire semester before me. 
 	   I first began college majoring in Psychology, but halfway into my college career, I realized I wanted to major in something 
 	   emphasizing more in marketing. I then switched my major to Organizational Communication. 
 	 </p>
 	 </section>
 	 <figure>
-	 <figcaption></figcaption>
+		<img src="https://i.imgur.com/a7Pjs0y.jpg" alt="Gal pals on game day">
+	 <figcaption>
+		 Me and my gal pals on game day!
+	 </figcaption>
 	 </figure>
-	 <section>
+	 <section id="sec3">
 	 <h3>After Graduation</h3>
-	 <p>
+	 <p id="p4">
 	    After graduating from Mizzou, I accepted my first job right away at Insight Global, an IT staffing firm. By staffing
 	    Software Developers and Buisiness Analysts, I learned about the many many positions in IT and how much moolah they made.
 	</p>
 	</section>
 	</article>
-	<article>
-	<section>
+	<article class="job">
+	<section id="sec4">
 	<a name="insight"></a>
 	<h2>My Time at Insight Global</h2>
 	<p>
@@ -82,19 +86,20 @@
 	   put on a project to staff the company "Square". 
 	</p>
 	<h3>How I Learned About LaunchCode</h3>
-	<p>
+	<p id="p5">
 		While conducting interviews for the "Square" customer service positions, I spoke with a girl who said she had learned
 		to code from a <b>free</b> program called "LaunchCode". She told me how to apply to the program and to keep my eyes peeled for when enrollments
 		were going to start up again. 
 	</p>
 	</section>
-	<section>
+	<section id="sec5">
 	<a name="launch"></a>
 	<h2>My Time at LaunchCode</h2>
-	<p>
+	<p id="p6">
 		Well, I guess it's pretty self explanatory that I am here at LaunchCode today! I often wonder what
 		my life would have been like had I gone to college on time, majored in something differemt, possibly gotten my first job
-		in something aside from IT staffing. 
+		somewhere else aside from Insight Global. I strongly believe every single life decision I have made in the past
+		has lead me to the exact moment/position I am in today! 
 	</p>
 	</section>
 	</article>
