almost finished with project!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 	<body>
 	   <header>
-	    <h1>The Life Events That Got Me to LaunchCode</h1>
+		   <div class="title">
+		<h1 class="centered">The Life Events That Got Me to LaunchCode</h1>
+	   		</div>
 	    <nav>
 	    <ul>
 	    <li>
@@ -28,9 +30,10 @@
 	    </header>
 	<main>
 	<article>
-	<section id="sec1">
+	<section>
 	   <a name="military"></a>
 	   <h2>My Time in the Military</h2>
+	   <div class="army">
 	   <p id="p1">In April 2013, when I was 17, I joined the Army National Guard. I signed up for a 6 year contract. I left for basic training and AIT directly
 	   after graduating highschool. For the first two and a half months, I was in South Carolina at Fort Jackson. The remainder of the time I was
 	   in Virginia at Fort Lee. At Fort Lee, I went through MOS training for 92Y which means, "Supply Specialist". This training taught me how to control the entire unit's 
@@ -44,6 +47,7 @@
 	   Once I graduated from Fort Lee, I then came back to Missouri and was enrolled in 
 	   the University of Missouri-Columbia. Also known as the beloved "Mizzou". 
 	   </p>	
+	   </div>
 	   </section>
 	   <figure> 
 	     <img src="https://i.imgur.com/Cg9D1AE.jpg" alt="Graduating MP School">
@@ -53,7 +57,7 @@
 	   </figure>
 	   </article>
 	<article>
-	<section id="sec2">
+	<section>
 	 <a name="mizzou"></a>
 	 <h2>My Time at Mizzou</h2>
 	 <p id="p3"> 
@@ -61,43 +65,41 @@
 	   I first began college majoring in Psychology, but halfway into my college career, I realized I wanted to major in something 
 	   emphasizing more in marketing. I then switched my major to Organizational Communication. 
 	 </p>
-	 </section>
 	 <figure>
 		<img src="https://i.imgur.com/a7Pjs0y.jpg" alt="Gal pals on game day">
 	 <figcaption>
 		 Me and my gal pals on game day!
 	 </figcaption>
 	 </figure>
-	 <section id="sec3">
 	 <h3>After Graduation</h3>
 	 <p id="p4">
 	    After graduating from Mizzou, I accepted my first job right away at Insight Global, an IT staffing firm. By staffing
-	    Software Developers and Buisiness Analysts, I learned about the many many positions in IT and how much moolah they made.
+	    Software Developers, Buisiness Analysts, and many other IT positions, I learned more about the field and how much moolah they made.
 	</p>
 	</section>
 	</article>
-	<article class="job">
-	<section id="sec4">
+	<article>
+	<section>
 	<a name="insight"></a>
 	<h2>My Time at Insight Global</h2>
 	<p>
-	   I spent about 11 months at Insight Global staffing contractors at fortune 500 companies such as, Centene, Boeing, Sqare, <br>
-	   I was putting in about 12 hours a day working a ton of over time to ensure I was finding candidates for my positions. I was <br>
+	   I spent about 11 months at Insight Global staffing contractors at fortune 500 companies such as, Centene, Boeing, Sqare,
+	   I was putting in about 12 hours a day working a ton of over time to ensure I was finding candidates for my positions. I was
 	   put on a project to staff the company "Square". 
 	</p>
 	<h3>How I Learned About LaunchCode</h3>
-	<p id="p5">
+	<p>
 		While conducting interviews for the "Square" customer service positions, I spoke with a girl who said she had learned
 		to code from a <b>free</b> program called "LaunchCode". She told me how to apply to the program and to keep my eyes peeled for when enrollments
 		were going to start up again. 
 	</p>
 	</section>
-	<section id="sec5">
+	<section>
 	<a name="launch"></a>
 	<h2>My Time at LaunchCode</h2>
-	<p id="p6">
-		Well, I guess it's pretty self explanatory that I am here at LaunchCode today! I often wonder what
-		my life would have been like had I gone to college on time, majored in something differemt, possibly gotten my first job
+	<p>
+		Well, I guess it's pretty obvious I am here at LaunchCode today! I often wonder what
+		where I would be had I gone to college on time, majored in something different, and possibly gotten my first job
 		somewhere else aside from Insight Global. I strongly believe every single life decision I have made in the past
 		has lead me to the exact moment/position I am in today! 
 	</p>
