a few more changes!

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<a name="launch"></a>
 	<h2>My Time at LaunchCode</h2>
 	<p>
-		Well, I guess it's pretty obvious I am here at LaunchCode today! I often wonder what
+		Well, I guess it's pretty obvious I am here at LaunchCode today! I often wonder
 		where I would be had I gone to college on time, majored in something different, and possibly gotten my first job
 		somewhere else aside from Insight Global. I strongly believe every single life decision I have made in the past
 		has lead me to the exact moment/position I am in today! 
