a few more changes to classes!

--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
 	   </section>
 	   <figure> 
 	     <img src="https://i.imgur.com/Cg9D1AE.jpg" alt="Graduating MP School">
-	        <figcaption>
+		 <div class="size">  
+		 <figcaption class="caption">
 		 My best friend and I after graduating from Military Police School
-                </figcaption>
+				</figcaption>
+				</div>
 	   </figure>
 	   </article>
 	<article>
@@ -67,9 +69,11 @@
 	 </p>
 	 <figure>
 		<img src="https://i.imgur.com/a7Pjs0y.jpg" alt="Gal pals on game day">
-	 <figcaption>
+		<div class="size">
+		<figcaption class="caption">
 		 Me and my gal pals on game day!
 	 </figcaption>
+	 </div>
 	 </figure>
 	 <h3>After Graduation</h3>
 	 <p id="p4">
