--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	     <img src="https://i.imgur.com/Cg9D1AE.jpg" alt="Graduating MP School">
 		 <div class="size">  
 		 <figcaption class="caption">
-		 My best friend and I after graduating from Military Police School
+		 <br>My best friend and I after graduating from Military Police School
 				</figcaption>
 				</div>
 	   </figure>
@@ -71,7 +71,7 @@
 		<img src="https://i.imgur.com/a7Pjs0y.jpg" alt="Gal pals on game day">
 		<div class="size">
 		<figcaption class="caption">
-		 Me and my gal pals on game day!
+		 <br>Me and my gal pals on game day!
 	 </figcaption>
 	 </div>
 	 </figure>
